# Position_Estimation_Design_Challenge

./: .gitignore  .gitmodules  README.md
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/gps_simulator/: gps_measurement.h
catkin_ws/devel/lib/gps_simulator/: gps_simulator
catkin_ws/devel/lib/pkgconfig/: gps_simulator.pc
catkin_ws/devel/lib/python2.7/dist-packages/gps_simulator/msg/: __init__.py  _gps_measurement.py
catkin_ws/devel/share/common-lisp/ros/gps_simulator/msg/: _package.lisp  _package_gps_measurement.lisp  gps_measurement.lisp  gps_simulator-msg.asd
catkin_ws/devel/share/gennodejs/ros/gps_simulator/msg/: _index.js  gps_measurement.js
catkin_ws/devel/share/gps_simulator/cmake/: gps_simulator-msg-extras.cmake  gps_simulator-msg-paths.cmake  gps_simulatorConfig.cmake
catkin_ws/devel/share/roseus/ros/gps_simulator/: manifest.l
catkin_ws/devel/share/roseus/ros/gps_simulator/msg/: gps_measurement.l
catkin_ws/src/accelerometer_simulator/: CMakeLists.txt  package.xml
catkin_ws/src/accelerometer_simulator/src/: accelerometer_simulator_node.cpp
catkin_ws/src/dynamics_simulator/: CMakeLists.txt  package.xml
catkin_ws/src/dynamics_simulator/launch/: run_simulation.launch  run_simulation_graph_accelerometer.launch  run_simulation_graph_gps_estimation.launch
catkin_ws/src/dynamics_simulator/msg/: true_dynamics.msg
catkin_ws/src/dynamics_simulator/rviz/: rviz_graphing_config.rviz  rviz_graphing_config_accelerometer.rviz  rviz_graphing_config_gps_and_estimation.rviz  rviz_graphing_config_test.rviz
catkin_ws/src/dynamics_simulator/src/: true_dynamics_node.cpp
catkin_ws/src/estimation/: CMakeLists.txt  package.xml
catkin_ws/src/estimation/launch/: run_simulation_kalman_filter.launch
catkin_ws/src/estimation/rviz/: rviz_graphing_config_kalman_test.rviz
catkin_ws/src/estimation/src/: estimation_node.cpp
catkin_ws/src/gps_simulator/: CMakeLists.txt  package.xml
catkin_ws/src/gps_simulator/src/: gps_simulator_node.cpp
true_dynamics/: true_dynamics_generation.py
